--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <!-- <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"> -->
   <!-- <link rel="shortcut icon" href="#" /> -->
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" /> -->
+  <link rel="icon" type="image/png" href="src/assets/images/favicon.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 </head>
